force-app/main/default/objects/FeatureRequest__c/FeatureRequest__c.object-meta.xml
<CustomObject>
    <label>Feature Request</label>
    <nameField>
        <label>Feature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <!-- Project Lookup Field -->
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Feature Requests</relationshipLabel>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Requested By Contact Lookup Field -->
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feature Requests</relationshipLabel>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Feature Text Field -->
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <!-- Priority Picklist Field -->
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Impact Score Number Field -->
    <fields>
        <fullName>Impact_Score__c</fullName>
        <label>Impact Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    
    <!-- Status Picklist Field -->
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject> 