force-app/main/default/objects/FeatureRequest__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 