force-app/main/default/objects/FeatureRequest__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <label>Impact Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 